--- a/BookSoek/BookSorting.xaml
+++ b/BookSoek/BookSorting.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:BookSoek"
       mc:Ignorable="d" 
       d:DesignHeight="400" d:DesignWidth="800"
-      Title="BookSorting">
+      Title="BookSorting" Loaded="Page_Loaded">
 
     <Page.Resources>
         <Style x:Key="RoundButton" TargetType="Button">
@@ -89,13 +89,15 @@
 
                         </Grid>
                         <Grid Width="50" HorizontalAlignment="Left" Margin="200,0,0,0">
-                            <Label x:Name="Score" Content="XX" FontSize="16" Foreground="White" HorizontalAlignment="Center" Width="50" />
+                            <Label x:Name="Score" Content="" FontSize="16" Foreground="White" HorizontalAlignment="Center" Width="50" />
 
                         </Grid>
                     </Grid>
                     <Grid Height="135" VerticalAlignment="Bottom">
                         <Grid Height="60" Width="180" Margin="0,0,0,40">
-                            
+                            <Image x:Name="star1"  Height="55" Width="55" HorizontalAlignment="Left" Margin="0,0,0,0"/>
+                            <Image x:Name="star2"  Height="55" Width="55" HorizontalAlignment="Left" Margin="60,0,0,0"/>
+                            <Image x:Name="star3"  Height="55" Width="55" HorizontalAlignment="Left" Margin="120,0,0,0"/>
                         </Grid>
                     </Grid>
                 </Grid>
