--- a/BookSoek/AreaSearch.xaml
+++ b/BookSoek/AreaSearch.xaml
@@ -8,7 +8,91 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="AreaSearch">
 
-    <Grid>
-        <Label Content="Game coming soon!"/>
+    <Page.Resources>
+        <Style x:Key="RoundButton" TargetType="Button">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Grid>
+                            <Ellipse x:Name="ellipse" Fill="Transparent" Stroke="Green" StrokeThickness="3"/>
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="ellipse" Property="Stroke" Value="White"/>
+                                <Setter Property="Foreground" Value="White"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Page.Resources>
+
+    <Grid x:Name="grdMain" Height="420">
+        <Grid x:Name="grdLeft" Width="250" HorizontalAlignment="Left" Background="White">
+            <Grid Height="379" VerticalAlignment="Top">
+                <Label Content="Area" HorizontalAlignment="Left" Margin="38,80,0,0" VerticalAlignment="Top" FontSize="28" FontWeight="Bold"/>
+                <Label Content="Searching." HorizontalAlignment="Left" Margin="58,115,0,0" VerticalAlignment="Top" FontSize="28" FontWeight="Bold"/>
+                <Label HorizontalAlignment="Left" Margin="30,177,0,85" FontSize="10" FontWeight="Bold" Width="205">
+                    <TextBlock TextWrapping="Wrap" Width="200" Height="120">
+                This activity allows you to practise matching call numbers with thei respective descriptions. You need to select the number on the left and the click the correct description on the right. When you are finished click confirm...
+                    </TextBlock>
+                </Label>
+            </Grid>
+
+        </Grid>
+        <Grid x:Name="grdRight" Width="550" HorizontalAlignment="Left" Background="#FF212529" Margin="250,0,0,0">
+
+            <Grid Width="150" HorizontalAlignment="Left" Margin="0,0,0,0">
+                <Button x:Name="Item1" Content="x" HorizontalAlignment="Left" Margin="26,40,0,0" VerticalAlignment="Top" Width="100" Height="25"  />
+                <Button x:Name="Item2" Content="x" HorizontalAlignment="Left" Margin="26,75,0,0" VerticalAlignment="Top" Width="100" Height="25"  />
+                <Button x:Name="Item3" Content="x" HorizontalAlignment="Left" Margin="26,110,0,0" VerticalAlignment="Top" Width="100" Height="25" />
+                <Button x:Name="Item4" Content="x" HorizontalAlignment="Left" Margin="26,145,0,0" VerticalAlignment="Top" Width="100" Height="25" />
+
+            </Grid>
+            <Grid Width="150" HorizontalAlignment="Left" Margin="150,0,0,0" >
+                <Button x:Name="Description1" Content="x" HorizontalAlignment="Left" Margin="26,40,0,0" VerticalAlignment="Top" Width="100" Height="25"  />
+                <Button x:Name="Description2" Content="x" HorizontalAlignment="Left" Margin="26,75,0,0" VerticalAlignment="Top" Width="100" Height="25"  />
+                <Button x:Name="Description3" Content="x" HorizontalAlignment="Left" Margin="26,110,0,0" VerticalAlignment="Top" Width="100" Height="25" />
+                <Button x:Name="Description4" Content="x" HorizontalAlignment="Left" Margin="26,145,0,0" VerticalAlignment="Top" Width="100" Height="25" />
+                <Button x:Name="Description5" Content="x" HorizontalAlignment="Left" Margin="26,180,0,0" VerticalAlignment="Top" Width="100" Height="25" />
+                <Button x:Name="Description6" Content="x" HorizontalAlignment="Left" Margin="26,215,0,0" VerticalAlignment="Top" Width="100" Height="25" />
+                <Button x:Name="Description7" Content="x" HorizontalAlignment="Left" Margin="26,250,0,0" VerticalAlignment="Top" Width="100" Height="25" />
+
+            </Grid>
+            <Grid Width="250" HorizontalAlignment="Left" Margin="300,0,0,0">
+                <Grid Height="200" VerticalAlignment="Top" Margin="0,0,0,0">
+                    <Button x:Name="Confirm" Content="Confirm" Foreground="Green" Style="{StaticResource RoundButton}" Width="70" Height="70" HorizontalAlignment="Left" Margin="40,0,0,0" Click="Confirm_Click"/>
+                    <Button x:Name="Retry" Content="Retry" Foreground="Green"  Style="{StaticResource RoundButton}" Width="70" Height="70" HorizontalAlignment="Left" Margin="140,0,0,0" Click="Retry_Click"/>
+                </Grid>
+
+                <Grid  Height="200" VerticalAlignment="Top" Margin="0,200,0,0">
+                    <Grid Height="35" VerticalAlignment="Top" Margin="0,0,0,0">
+                        <Label Content="Results" FontSize="23" Foreground="White" HorizontalAlignment="Center" />
+                    </Grid>
+                    <Grid Height="30" VerticalAlignment="Top" Margin="0,35,0,0">
+                        <Grid Width="200" HorizontalAlignment="Left" Margin="0,0,0,0">
+                            <Label Content="Total Correct Matches: " FontSize="16" Foreground="White" HorizontalAlignment="Center" />
+
+                        </Grid>
+                        <Grid Width="50" HorizontalAlignment="Left" Margin="200,0,0,0">
+                            <Label x:Name="Score" Content="" FontSize="16" Foreground="White" HorizontalAlignment="Center" Width="50" />
+
+                        </Grid>
+                    </Grid>
+                    <Grid Height="135" VerticalAlignment="Bottom">
+                        <Grid Height="60" Width="180" Margin="0,0,0,40">
+                            <Image x:Name="star1"  Height="55" Width="55" HorizontalAlignment="Left" Margin="0,0,0,0"/>
+                            <Image x:Name="star2"  Height="55" Width="55" HorizontalAlignment="Left" Margin="60,0,0,0"/>
+                            <Image x:Name="star3"  Height="55" Width="55" HorizontalAlignment="Left" Margin="120,0,0,0"/>
+                        </Grid>
+                    </Grid>
+                </Grid>
+
+            </Grid>
+
+        </Grid>
+
     </Grid>
 </Page>
